<resources>
    <string name="app_name" translatable="false">Lim</string>
    <string name="server_ip" translatable="false">192.168.10.10</string>
    <string name="login" translatable="false">user</string>
    <string name="password" translatable="false">yv4Example6nInIniOIn</string>
    <string name="display_name" translatable="false">^-^ / (remove)</string>
    <string name="zero_time" translatable="false">00:00</string>

    <string name="cert_import_error">certificate import error</string>
    <string name="date_cert_before_error">error: the device date is earlier than the certificate issue date</string>
    <string name="date_cert_after_error">error: the certificate has expired</string>
    <string name="public_key_cert_error">error: certificate public keys do not match</string>
    <string name="sign_cert_error">error: certificate signature verification failed</string>
    <string name="main_cert_error">error: certificate verification failed</string>
    <string name="search_user_error">error while searching for user</string>
    <string name="server_ip_help">server ip</string>
    <string name="login_help">login</string>
    <string name="password_help">password</string>
    <string name="display_name_help">display name</string>
    <string name="reg_btn_text">register</string>
    <string name="youtube_btn_text">youtube</string>
    <string name="cert_btn_text">add certificate</string>
    <string name="send_login">send login</string>
    <string name="send_msg">send message</string>
    <string name="hide_chat">Hide</string>
    <string name="block_chat">Block</string>
    <string name="unblock_chat">Unlock</string>
    <string name="select_action_for_chat">Select an action for this chat</string>
    <string name="wait_server_answer">wait for server response…</string>>
    <string name="rename_chat_title">Chat options</string>
    <string name="rename_chat_btn">Rename</string>
    <string name="rename_chat_hint">New chat name</string>
    <string name="new_chat_number">Chat_</string>
    <string name="system_critical_error_text">Initialization error, application cannot operate.</string>
    <string name="system_critical_error_title">Critical error</string>
    <string name="system_critical_error_btn">Exit</string>
    <string name="no_app_to_open_file">No app to open file</string>
    <string name="file_not_found_on_disk">File not found on disk</string>

    <string name="login_error">invalid username format (3–20 chars, lowercase Latin and digits)</string>
    <string name="pass_error">invalid password format (6–20 chars)</string>
    <string name="ip_error">invalid ip format (only local)</string>
    <string name="display_name_error">invalid display name format (3–20 chars)</string>
    <string name="display_name_reserved">remove reserved</string>
    <string name="reinstall">reinstall the app or remove account for a new login or new server.</string>
    <string name="chat_icon_desc">chat icon</string>
    <string name="user_icon_desc">user icon</string>
    <string name="add_file_btn_text">add file or record voice</string>
    <string name="remove_file_btn_text">remove file</string>
    <string name="user_fields">user fields</string>
    <string name="new_chat">new chat</string>
    <string name="find_user">create</string>
    <string name="yesterday">yesterday</string>
    <string name="big_file_error">The file is too large (maximum 50MB)</string>
    <string name="select_file_error">no file selected for sending</string>
    <string name="send_login_hint">send your interlocutor\'s login to start a chat</string>
    <string name="msg_notification_channel_name">Messages</string>
    <string name="call_notification_channel_name">Incoming calls</string>
    <string name="missing_call">Missing call from</string>
    <string name="new_msg">New message</string>
    <string name="new_msgs">New messages</string>
    <string name="new_msg_from">From:</string>
    <string name="unread_chats">In chats</string>
    <string name="error_starting_record">Error starting record</string>
    <string name="recording">Recording…</string>
    <string name="stop_recording">Tap outside to save</string>
    <string name="image">image preview</string>
    <string name="interlocutor_deleted_error">There is no interlocutor in this chat</string>
    <string name="incoming_call">Incoming call</string>
    <string name="cancel_call">Cancel</string>
    <string name="end_call">End call</string>
    <string name="calling">Calling</string>
    <string name="accept_call">Accept call</string>
    <string name="reject_call">Reject call</string>
    <string name="switch_speaker">Switch speaker</string>
    <string name="choose_green">Choose green</string>
    <string name="choose_pink">Choose pink</string>
    <string name="choose_blue">Choose blue</string>
    <string name="choose_yellow">Choose yellow</string>
    <string name="exit">Exit</string>
    <string name="chat_name">Chat name</string>
    <string name="file_name">File name</string>
    <string name="last_msg">Last message</string>
    <string name="time_msg">Time message</string>
    <string name="msg_text">Message</string>
    <string name="player_time">Player time</string>
    <string name="you">You</string>
    <string name="interlocutor">Interlocutor</string>
    <string name="voice_message">Voice message</string>
    <string name="text_copied">Text copied</string>

</resources>