<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fielder_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:id="@+id/recordingIcon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:importantForAccessibility="no"
        android:src="@drawable/mic_48px" />

    <TextView
        android:id="@+id/tvRecordingTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:importantForAccessibility="no"
        android:text="@string/zero_time"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/recording"
        android:textColor="@color/light_gray_aaa"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/stop_recording"
        android:textColor="@color/gray400"
        android:textSize="14sp"
        android:textStyle="italic" />

</LinearLayout>