<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chatOuter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <TextView
        android:id="@+id/onlineStatus"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/cloud_48px"
        android:textColor="@color/chat_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/chatNameTextScroll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chatNameTextScroll" />

    <HorizontalScrollView
        android:id="@+id/chatNameTextScroll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/fielder_background_tr"
        android:fillViewport="true"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/onlineStatus"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/chatNameText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ellipsize="middle"
            android:gravity="center_vertical|start"
            android:singleLine="true"
            android:textColor="@color/chat_name"
            android:textSize="32sp"
            android:textStyle="bold" />
    </HorizontalScrollView>

    <!-- Список сообщений -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messagesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/inputContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatNameTextScroll"
        app:stackFromEnd="true"
        tools:listitem="@layout/item_message" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/attachmentPreview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="@color/main_background_50"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:paddingBottom="2dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/inputContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <HorizontalScrollView
            android:id="@+id/fileNameTextScroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:background="@color/transparent"
            android:fillViewport="true"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/clearFileButton"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/fileNameText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ellipsize="middle"
                android:gravity="center_vertical|start"
                android:singleLine="true"
                android:textColor="@color/light_gray_aaa"
                android:textSize="14sp" />
        </HorizontalScrollView>

        <TextView
            android:id="@+id/clearFileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:clickable="true"
            android:contentDescription="@string/remove_file_btn_text"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="[ - ]"
            android:textColor="@color/gray400"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Нижняя панель ввода -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/fielder_background_tr"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:paddingBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/addFileButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:clickable="true"
            android:contentDescription="@string/add_file_btn_text"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="[ + ]"
            android:textColor="@color/gray400"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/messageEditText" />

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="username"
            android:backgroundTint="@android:color/darker_gray"
            android:hint="@string/send_msg"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray700"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sendButton"
            app:layout_constraintStart_toEndOf="@+id/addFileButton" />

        <TextView
            android:id="@+id/sendButton"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:layout_marginEnd="4dp"
            android:clickable="true"
            android:contentDescription="@string/send_icon_desc"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/green_400"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/messageEditText" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>